tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__ABackpackforBees-AAAAAAAAAAAAAAAAAAAKuQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2745,
  "prerequisites": [
    1111
  ],
  "properties": {
    "auto_claim": false,
    "desc": "It's exactly what it says. It's also incredibly useful.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "A Backpack for Bees",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1111
  ],
  "rewards": [],
  "tasks": []
}
