tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__AdvancedMutatron-AAAAAAAAAAAAAAAAAAACAQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 513,
  "prerequisites": [
    508
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A more advanced version of the mutatron. It uses more energy to mutate a drone with a princess, and you can select which mutation you want to have. This machine is a must-have for high-tier bees.\n\n[note]You'll need neutronium bees to make this.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Advanced Mutatron",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    508
  ],
  "rewards": [],
  "tasks": []
}
