tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__HowtoBee-AAAAAAAAAAAAAAAAAAAAFA==__AndThereShallbeL-AAAAAAAAAAAAAAAAAAACBg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 518,
  "prerequisites": [
    516,
    517
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Out of princesses to inject traits to? Too lazy to find hives and get more bees? Not a problem. With this nifty little device, you can use a ton of power, liquid DNA and protein to create any bee you wish to have. The only drawback is: All bees will be ignoble, which means they will die after a random amount of cycles after 90.\n\nOf course, there's an upgrade for the industrial apiary to deal with that",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "And There Shall be Light",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    516,
    517
  ],
  "rewards": [],
  "tasks": []
}
